refactor: update branding with new logo, fonts and navigation structure

--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
-      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-cropped.png" />
-      <link rel="icon" type="image/png" sizes="64x64" href="/favicon-cropped.png" />
-      <link rel="icon" type="image/png" sizes="128x128" href="/favicon-cropped.png" />
-      <link rel="icon" type="image/png" sizes="256x256" href="/favicon-cropped.png" />
-      <link rel="icon" type="image/png" sizes="512x512" href="/favicon-cropped.png" />
+      <link id="favicon" rel="icon" type="image/svg+xml" href="/favicon-cropped.png" />
       <link rel="apple-touch-icon" sizes="180x180" href="/favicon-cropped.png" />
     <title>Cape Lux Living - Premium Property Management in Cape Town</title>
     <meta name="description" content="Maximize your property investment returns with Cape Lux Living's comprehensive luxury property management services in Cape Town. Professional, reliable, and results-driven." />
